Bug 195576 - maximize button doesn't work as expected, left click doesn't restore original size
Summary: maximize button doesn't work as expected, left click doesn't restore original...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-07 17:31 UTC by Tanja Schulte
Modified: 2012-03-14 01:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tanja Schulte 2009-06-07 17:31:09 UTC
Version:           KDE 4.3 Beta1 (using KDE 4.2.4)
OS:                Linux
Installed from:    Ubuntu Packages

I use the standard settings for the window's maximize button: left click resizes horizontally & vertically, middle click resizes vertically, right click resizes horizontally.

When I just use the left mouse button it does work as expected, window gets maximized and restored to original size. Now I maximize the window mit left click, then I use the middle mouse button to shrink the maximized window just vertically. Then I maximize the window again either with left or middle click. Everything's fine so far. Now I want to restore the original size from that full maximized window. So I click the maximize button with the left, which is defined as both direction resizing. But instead of restoring the default size the window gets only shrinked vertically as before. I need to then click right to restore the original size.

This means once I have used any other mouse button than the left one on the maximize button I cannot restore the maximized window to default size with the left mouse button but always have to use either left + right click (as described above) or left + middle click when I used the right key to downsize the window from full maximize. The original window size is remembered but not used, instead the last used window size is restored with a left click.
Comment 1 Janet 2009-11-13 14:19:11 UTC
I can confirm this with KDE 4.3.2 and sidux distribution. This behaviour is all but intuitive and very confusing. A left click on the maximize button IMHO should always resize to both directions, up or down, that's what's expected from its description.
Comment 2 FiNeX 2010-10-10 23:01:19 UTC
Confirmed with 4.5.2
Comment 3 Thomas Lübking 2012-03-12 03:23:16 UTC
http://git.reviewboard.kde.org/r/104219/
Comment 4 Thomas Lübking 2012-03-14 01:41:54 UTC
Git commit 2b3bcb59586a40636e0d5f97c5d0d083945bdba7 by Thomas Lübking.
Committed on 11/03/2012 at 06:35.
Pushed by luebking into branch 'master'.

remove overzealous maxmode_restore

there's no point in changing the behavior of the maximize button

M  +0    -1    kwin/client.cpp
M  +0    -7    kwin/client.h
M  +0    -18   kwin/geometry.cpp

http://commits.kde.org/kde-workspace/2b3bcb59586a40636e0d5f97c5d0d083945bdba7