remove overzealous maxmode_restore

there's no point in changing the behavior of the maximize button

BUG: 195576